--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@visx/group": "2.1.0",
     "@visx/hierarchy": "2.1.0",
     "@visx/shape": "2.1.0",
-    "axios": "0.27.2",
+    "axios": "^1.2.1",
     "bootstrap": "5.1.3",
     "calendar-months": "1.0.1",
     "crypto-js": "4.1.1",
